--- a/SmartSchool.API/SmartSchool.API.csproj
+++ b/SmartSchool.API/SmartSchool.API.csproj
@@ -11,6 +11,8 @@
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.0" />
 	<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration" Version="3.1.1" />
 	<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.2" />
+	<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+	  
   </ItemGroup>
 
 
